Test/dafny4/git-issue16.dfy.expect
git-issue16.dfyp(4,8): Error: the included file git-issue16.dfypi contains error(s)
git-issue16.dfypi(2,5): Error: arguments must have comparable types (got int and bool)
2 resolution/type errors detected in git-issue16.dfyp
